--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green Tree Initiative</title>
     <link rel="stylesheet" href="style-mobile.css">
     <link rel="stylesheet" href="style-tablet.css">
     <link rel="stylesheet" href="style-desktop.css">
