connected donation page with index.html page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- <img src="annie-spratt-135307-unsplash.png" alt="error" id="first-img"> -->
     </div>
-    <button class="donate-today-button">
+    <button class="donate-today-button" onclick="window.location.href = 'donation-mobile.html';">
         <p class="donate-today-text">Donate today</p>
     </button>
     <div class="screen one">
