added did you know and stories div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="screen zero"></div>
+    <div class="screen zero">
     <div class="wrapper">
         <div>
             <p class="logo">The Green <br> Trees Initiative</p>
@@ -28,6 +28,7 @@
     <button class="donate-today-button" onclick="window.location.href = 'donation-mobile.html';">
         <p class="donate-today-text">Donate today</p>
     </button>
+    </div>
     <div class="screen one">
         <img src="stopclimatechange.png" alt="error" class="first-stop-climate">
         <!-- <p id="stop-climate-change-text">#stop climate change</p> -->
@@ -67,9 +68,11 @@
         </div>
     </div>
     <div class="screen three">
+
         <div id="third-screen-first-rect">
             <p class="what-we-do-text">WHAT WE DO</p>
         </div>
+        
         <div>
             <p class="third-screen-our-mission-para">Our mission is to create sustainable work for women in developing
                 nations while helping to slow climate change.</p>
@@ -116,6 +119,7 @@
     </div>
     <div class="screen four">
         <img src="Climate changeIs a hunger issue..png" alt="error" class="hunger-issue">
+        
         <!-- <p>Climate change Is a hunger issue.</p> -->
         <button class="read-more-button screen-four-button">
             <p class="read-more-text">Take action today</p>
@@ -123,6 +127,9 @@
         <div class="big-rect screen-four-rect-1">
             <p class="heading">3 out of 4</p>
             <p class="small-heading">People living in poverty depend on agriculture for survival.</p>
+            <div class="did-you-know">
+                <p class="did-you-know-text">DID YOU KNOW?</p>
+            </div>
         </div>
         <div class="big-rect screen-four-rect-2">
             <p class="heading">100 million +</p>
@@ -140,6 +147,9 @@
     <div class="screen five">
         <div class="img-div">
             <img src="lady-baby.png" alt="error" class="img">
+        </div>
+        <div class="stories">
+            <p class="stories-text">STORIES</p>
         </div>
         <div class="big-rect blue">
             <p class="screen-five-text">“I am a person who was helped by this organization. Before they gave me
